tests/snapshots/snapshots__help_overlay_styled.snap
---
source: tests/snapshots.rs
assertion_line: 227
expression: buffer_to_styled(&buf)
---
{fg=#6b7280 bg=#1f232b mod=bold} FILTERS{/}{fg=#c8ccd4 bg=#1f232b}                  {/}{bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}▶{/}{fg=#e07a7a bg=#1f232b}▮{/}{fg=#8aa9c9 bg=#1f232b}◀{/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#6b7280 bg=#1f232b}  •  15 tas{/}{fg=#6b7280 bg=#1f232b mod=bold} DETAIL{/}{fg=#c8ccd4 bg=#1f232b}                           {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}┌ {/}{fg=#8aa9c9 bg=#1f232b mod=bold}tuxedo{/}{fg=#6b7280 bg=#1f232b} · help {/}{fg=#2a2f38 bg=#1f232b}─────────────────────────────────────────────────────────────────────────┐{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#7fb3a8 bg=#1f232b mod=bold} PROJ{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b mod=bold}NAVIGATION{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}{fg=#8aa9c9 bg=#1f232b mod=bold}VIEW{/}{fg=#c8ccd4 bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+w{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}j / ↓             {/}{fg=#c8ccd4 bg=#1f232b}next task                 {/}{fg=#c89a6e bg=#1f232b mod=bold}/                 {/}{fg=#c8ccd4 bg=#1f232b}fuzzy search          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+h{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}k / ↑             {/}{fg=#c8ccd4 bg=#1f232b}previous task             {/}{fg=#c89a6e bg=#1f232b mod=bold}fp / fc           {/}{fg=#c8ccd4 bg=#1f232b}filter project/context{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+f{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}gg                {/}{fg=#c8ccd4 bg=#1f232b}first task                {/}{fg=#c89a6e bg=#1f232b mod=bold}ff / fs           {/}{fg=#c8ccd4 bg=#1f232b}saved filter pick/save{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+h{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}G                 {/}{fg=#c8ccd4 bg=#1f232b}last task                 {/}{fg=#c89a6e bg=#1f232b mod=bold}S                 {/}{fg=#c8ccd4 bg=#1f232b}cycle sort            {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+l{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}Ctrl-d / Ctrl-u   {/}{fg=#c8ccd4 bg=#1f232b}page down / up            {/}{fg=#c89a6e bg=#1f232b mod=bold}v                 {/}{fg=#c8ccd4 bg=#1f232b}visual / multi-select {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+p{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                                {/}{fg=#c89a6e bg=#1f232b mod=bold}l                 {/}{fg=#c8ccd4 bg=#1f232b}list view             {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+t{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b mod=bold}EDITING{/}{fg=#c8ccd4 bg=#1f232b}                                       {/}{fg=#c89a6e bg=#1f232b mod=bold}a                 {/}{fg=#c8ccd4 bg=#1f232b}archive view          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}n                 {/}{fg=#c8ccd4 bg=#1f232b}new task                  {/}{fg=#c89a6e bg=#1f232b mod=bold}A                 {/}{fg=#c8ccd4 bg=#1f232b}archive completed     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}rd   {/}
{fg=#c89a6e bg=#1f232b mod=bold} CONT{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}e / i             {/}{fg=#c8ccd4 bg=#1f232b}edit current line         {/}{fg=#c89a6e bg=#1f232b mod=bold}H                 {/}{fg=#c8ccd4 bg=#1f232b}show done in list     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@e{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}x                 {/}{fg=#c8ccd4 bg=#1f232b}toggle complete           {/}{fg=#c89a6e bg=#1f232b mod=bold}F                 {/}{fg=#c8ccd4 bg=#1f232b}show future in list   {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@h{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}dd                {/}{fg=#c8ccd4 bg=#1f232b}delete task               {/}{fg=#c89a6e bg=#1f232b mod=bold}[ / ]             {/}{fg=#c8ccd4 bg=#1f232b}toggle filter / detail{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@l{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}p                 {/}{fg=#c8ccd4 bg=#1f232b}cycle priority A→B→C→·    {/}{fg=#c89a6e bg=#1f232b mod=bold}T                 {/}{fg=#c8ccd4 bg=#1f232b}cycle theme           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@p{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}c                 {/}{fg=#c8ccd4 bg=#1f232b}add/remove context        {/}{fg=#c89a6e bg=#1f232b mod=bold}D                 {/}{fg=#c8ccd4 bg=#1f232b}cycle density         {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}+                 {/}{fg=#c8ccd4 bg=#1f232b}add project               {/}{fg=#c89a6e bg=#1f232b mod=bold}L                 {/}{fg=#c8ccd4 bg=#1f232b}toggle line numbers   {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}yy                {/}{fg=#c8ccd4 bg=#1f232b}copy line to clipboard                                            {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}yb                {/}{fg=#c8ccd4 bg=#1f232b}copy body only          {/}{fg=#8aa9c9 bg=#1f232b mod=bold}SYSTEM{/}{fg=#c8ccd4 bg=#1f232b}                                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}m                 {/}{fg=#c8ccd4 bg=#1f232b}add note                  {/}{fg=#c89a6e bg=#1f232b mod=bold}: / Ctrl-P        {/}{fg=#c8ccd4 bg=#1f232b}command palette       {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}M                 {/}{fg=#c8ccd4 bg=#1f232b}edit note                 {/}{fg=#c89a6e bg=#1f232b mod=bold}s                 {/}{fg=#c8ccd4 bg=#1f232b}share capture QR      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}u                 {/}{fg=#c8ccd4 bg=#1f232b}undo                      {/}{fg=#c89a6e bg=#1f232b mod=bold}? / ,             {/}{fg=#c8ccd4 bg=#1f232b}help / settings       {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                                {/}{fg=#c89a6e bg=#1f232b mod=bold}q                 {/}{fg=#c8ccd4 bg=#1f232b}quit                  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│────────────────────────────────────────────────────────────────────────────────────────│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b mod=bold}FORMAT{/}{fg=#c8ccd4 bg=#1f232b}                                                                                {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}(A)               {/}{fg=#c8ccd4 bg=#1f232b}priority A-Z              {/}{fg=#c89a6e bg=#1f232b mod=bold}due:YYYY-MM-DD    {/}{fg=#c8ccd4 bg=#1f232b}due date              {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}YYYY-MM-DD        {/}{fg=#c8ccd4 bg=#1f232b}creation / done date      {/}{fg=#c89a6e bg=#1f232b mod=bold}rec:Nu            {/}{fg=#c8ccd4 bg=#1f232b}recur (u in d/w/m/y/b){/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}+project          {/}{fg=#c8ccd4 bg=#1f232b}project tag(s)            {/}{fg=#c89a6e bg=#1f232b mod=bold}rec:+Nu           {/}{fg=#c8ccd4 bg=#1f232b}strict: anchor on due:{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c89a6e bg=#1f232b mod=bold}@context          {/}{fg=#c8ccd4 bg=#1f232b}context tag(s)            {/}{fg=#c89a6e bg=#1f232b mod=bold}x DATE BODY       {/}{fg=#c8ccd4 bg=#1f232b}completed task prefix {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}└────────────────────────────────────────────────────────────────────────────────────────┘{/}{fg=#c8ccd4 bg=#1f232b}     {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} HELP {/}{bg=#252a33}  {/}{fg=#a8b0bc bg=#252a33}? close help{/}{bg=#252a33}                                         {/}{fg=#6b7280 bg=#252a33}15 open · 2026-05-06 · tuxedo 2026.6.2 {/}
